fixed broken rendering on Safari new iOS 14.2

--- a/less/bootstrap-select.less
+++ b/less/bootstrap-select.less
@@ -385,6 +385,13 @@ select.selectpicker {
     }
   }
 
+  & > .btn {
+    max-height: 37px !important;
+  }
+  & > .btn > .filter-option {
+    max-height: 25px !important;
+  }
+
   // default check mark for use without an icon font
   .bs-ok-default:after {
     content: '';
